--- a/styles.css
+++ b/styles.css
@@ -289,12 +289,47 @@ footer {
 
   .contact-box input,
   .contact-box textarea,
-  .contact-box button, footer {
+  .contact-box button {
     width: 80%;
   }
 
   .Projects-box {
     width: 80%;
     height: auto;
+  }
+}
+
+@media (max-width: 480px){
+  .hero-section h1{
+    font-size: 2rem;
+  }
+
+  .hero-section p{
+    font-size: 1.2rem;
+  }
+
+  .skill-box {
+    margin-bottom: 1.5rem;
+    font-size: 0.7rem;
+    height: auto;
+    width: 60%;
+    padding-right: 1rem;
+  }
+
+  .contact-box input,
+  .contact-box textarea,
+  .contact-box button{
+    font-size: 0.7rem;
+    width: 80%;
+    padding-right: 1rem;
+
+  }
+  .about p{
+    height: auto;
+  }
+  footer {
+    font-size: 0.7rem;
+    /* width: 100%;
+    text-align: center; */
   }
 }
